Lab 6 Naive cookie-based login system

--- a/src/main/resources/AlbumList.properties
+++ b/src/main/resources/AlbumList.properties
@@ -5,3 +5,10 @@ album=Album
 rating=Rating
 switchLang=Switch language to:
 vote=Vote
+login=Log in
+logout=Log out
+username=user name
+password=password
+submitLogin=submit
+incorrectLogin=Incorrect login or password!
+helloText=Hello, 
